# bigg

./: .gitmodules  CMakeLists.txt  README.md  sandals.gltf
assets/: assets.cmake
examples/: CMakeLists.txt
examples/cubes/: CMakeLists.txt  cubes.cpp
examples/imgui_demo/: CMakeLists.txt  imgui_demo.cpp  main.cpp
include/: bigg.hpp
src/: bigg.cpp  bigg_assets.h  bigg_imgui.hpp  bigg_shaders.hpp
